# calcflow

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  coverage.xml  mkdocs.yml  parser-spec.md  pyproject.toml  pytest.out  test.py
.cursor/rules/: data_structures.mdc  docs.mdc  general.mdc  parser_spec.mdc  testing.mdc  typing.mdc
.github/workflows/: tests.yml
.windsurf/rules/: data_structures.md  docs.md  general.md  parser_spec.md  testing.md  typing.md
data/geometries/: 2h2o-1d0a.xyz  3h2o-1d1a.xyz  3h2o-2d0a.xyz  4h2o-2d1a.xyz
docs/: index.md  logging.md  structure.md
docs/calcflow/: core.md
docs/calcflow/inputs/: orca.md  slurm.md
scripts/: create-parse-orca.py  create-parse-qchem.py  example-use.py
src/calcflow/: __init__.py  core.py  exceptions.py  utils.py
src/calcflow/basis_sets/: __init__.py  core.py  registry.py
src/calcflow/basis_sets/qchem/: README.md  __init__.py  pcX.py
src/calcflow/constants/: __init__.py
src/calcflow/geometry/: static.py  trajectory.py
src/calcflow/inputs/: orca.py  qchem.py  slurm.py
src/calcflow/parsers/: orca.py
src/calcflow/parsers/orca/: __init__.py  charges.py  dipole.py  dispersion.py  geometry.py  main.py  opt.py  orbitals.py  scf.py  sp.py  typing.py
src/calcflow/parsers/qchem/: __init__.py  core.py  sp.py  typing.py
src/calcflow/typing/: __init__.py
src/calcflow/utils/: logging_config.py
src/calcflow/visualize/: colors.py  opt.py  scf.py  style.py
tests/: test_core.py
tests/basis_sets/: test_custom_basis.py  test_registry.py
tests/geometries/: test_static.py  test_trajectory.py
tests/inputs/: test_orca.py  test_qchem.py  test_qchem_mom.py  test_slurm.py
tests/inputs/qchem/: conftest.py  test_input_qchem_blocks.py  test_input_qchem_export.py  test_input_qchem_init.py  test_input_qchem_mom.py  test_input_qchem_setters.py  test_input_qchem_xas.py
tests/parsers/: test_orca_parser.py
tests/parsers/orca/: conftest.py  test_charges.py  test_dipole.py  test_dispersion.py  test_geometry.py  test_main.py  test_opt.py  test_orbitals.py  test_orca_opt.py  test_orca_sp.py  test_scf.py
tests/parsers/orca/blocks/: test_charges.py  test_dispersion.py  test_gradient.py  test_orca_dipole.py  test_orca_dispersion.py  test_orca_geometry.py  test_orca_orbitals.py  test_orca_relaxation.py  test_orca_scf.py  test_scf.py
tests/parsers/qchem/: conftest.py  test_qchem_mom_sp.py  test_qchem_mom_xas.py  test_qchem_sp.py  test_qchem_tddft.py
tests/parsers/qchem-5.4/: conftest.py  test_qchem_54_mom_sp.py  test_qchem_54_mom_xas.py  test_qchem_54_sp.py  test_qchem_54_tddft.py
tests/parsers/qchem/blocks/: test_qchem_charges.py  (+8 more)
(+52 files in other folders)
